# rw-axum-api

./: .env.example  Cargo.toml  README.md  test.http
frontend/: app.js  index.html  style.css
src/: lib.rs  main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  tokens.rs
src/handlers/: auth.rs  health.rs  mod.rs  root.rs
src/models/: email_verification_token.rs  mod.rs  password_reset_token.rs  refresh_token_model.rs  user.rs
src/repositories/: email_verification_repository.rs  mod.rs  password_reset_repository.rs  refresh_token_repository.rs  traits.rs  user_repository.rs
src/routers/: auth.rs  mod.rs  static_assets.rs  user.rs
src/schemas/: auth_schemas.rs  mod.rs  password_reset_schemas.rs  token_schemas.rs  user_schemas.rs
src/services/: email_service.rs
src/utils/: mod.rs  token_generator.rs
templates/: index.html
