[package]
name = "rw-axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
cargo-add = "0.2.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
