[package]
name = "rw-axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
validator = { version = "0.20", features = ["derive"] }
dotenvy = "0.15"
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
